# docs/openapi/organizations-api.yaml
@@ -55,6 +55,36 @@ organizations:
     security:
       - api_key: [ ]
 
+organizations-by-product-type:
+  get:
+    tags:
+      - organization
+    summary: Retrieve all organizations entitled to a given product
+    description: |
+      Returns only the organizations that have an entitlement for the given product code
+      (LLMO, ASO or ACO). Non-admin callers only see organizations whose entitlement tier
+      is customer-visible.
+    operationId: getOrganizationsByProductType
+    parameters:
+      - $ref: './parameters.yaml#/productType'
+    responses:
+      '200':
+        description: A list of organizations entitled to the given product
+        content:
+          application/json:
+            schema:
+              $ref: './schemas.yaml#/OrganizationList'
+      '400':
+        $ref: './responses.yaml#/400'
+      '401':
+        $ref: './responses.yaml#/401'
+      '403':
+        $ref: './responses.yaml#/403'
+      '500':
+        $ref: './responses.yaml#/500'
+    security:
+      - api_key: [ ]
+
 organization-projects:
   get:
     tags:
